--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <title>greatwebtech</title>
-    <script src="/config.js"></script>
+    <script src="./config.js"></script>
   </head>
   <body>
     <noscript>
